--- a/info.html
+++ b/info.html
@@ -41,11 +41,12 @@
             </form>
         </div>
         <!--Add a div under to show the highscores-->
-   <!-- <div class="score"></div>
+        
+    <!--<div class="highscores"></div>
     <button class="prev">Previous Question</button>
-    <button class="next">Next Question</button>
+    <button class="next">Next Question</button>-->
 
-    </div> -->
+    </div> 
     <script src="script.js"></script>
 </body>
 
